--- a/src/app/shred/footer/footer.component.html
+++ b/src/app/shred/footer/footer.component.html
@@ -5,28 +5,29 @@
                 <li routerLinkActive="active" class="rk-menu__item"><a routerLink="about" class="rk-menu__link">Nosotros</a>
                 </li>
             </ul>
-            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} Gutavo Muññoz </span>All Right Reserved.</p>
+            <p class="rk-footer__text rk-footer__copy "> <span class="ae-u-bold">© </span><span class="ae-u-bolder">{{ anio }} {{ _infoService.info.nombre_corto }} </span>All Right Reserved.</p>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center">
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blanck" [href]="_infoService.info.facebook" class="rk-social-btn ">
                 <svg>
           <use xlink:href="assets/img/symbols.svg#icon-facebook"></use>
         </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blanck" [href]="_infoService.info.twitter" class="rk-social-btn ">
                 <svg>
           <use xlink:href="assets/img/symbols.svg#icon-twitter"></use>
         </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blanck" [href]="_infoService.info.instagram" class="rk-social-btn ">
                 <svg>
           <use xlink:href="assets/img/symbols.svg#icon-pinterest"></use>
         </svg></a>
-            <a href="#0" class="rk-social-btn ">
+            <a target="_blanck" [href]="_infoService.info.tumblr" class="rk-social-btn ">
                 <svg>
           <use xlink:href="assets/img/symbols.svg#icon-tumblr"></use>
         </svg></a>
         </div>
         <div class="ae-grid__item item-lg-4 au-xs-ta-center au-lg-ta-right">
-            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a href="#0" class="rk-dark-color ">tavoxpau@gmail.com </a></span></p>
+            <p class="rk-footer__text rk-footer__contact "> <span class="ae-u-bold">Email: </span><span class="ae-u-bolder"> <a target="_blanck" [href]="_infoService.info.plus" class="rk-dark-color ">{{ _infoService.info.email }} </a></span></p>
+            <p class="rk-footer__text rk-footer__by">Theme by <a target="_blanck" [href]="_infoService.info.pagina" class="ae-u-bolder">{{ _infoService.info.pagina }}</a></p>
         </div>
     </div>
 </footer>
