Se trabaja en el consumo de los productos desde la bd de firebase

--- a/src/styles.css
+++ b/src/styles.css
@@ -3294,3 +3294,12 @@
         transition: none !important;
     }
 }
+
+svg path,
+svg rect {
+    fill: black;
+}
+
+.text-center {
+    text-align: center;
+}
