--- a/src/app/shred/header/header.component.html
+++ b/src/app/shred/header/header.component.html
@@ -1,34 +1,39 @@
 <header class="ae-container-fluid ae-container-fluid--full rk-header ">
     <input type="checkbox" id="mobile-menu" class="rk-mobile-menu">
     <label for="mobile-menu">
-    <svg>
-      <use xlink:href="assets/img/symbols.svg#bar"></use>
-    </svg>
-    <svg>
-      <use xlink:href="assets/img/symbols.svg#bar"></use>
-    </svg>
-    <svg>
-      <use xlink:href="assets/img/symbols.svg#bar"></use>
-    </svg>
-  </label>
+        <svg>
+            <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+        <svg>
+            <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+        <svg>
+            <use xlink:href="assets/img/symbols.svg#bar"></use>
+        </svg>
+    </label>
     <div class="ae-container-fluid rk-topbar">
-        <h1 class="rk-logo"><a routerLink="home">{{ _infoService.info.titulo }}<sup></sup></a></h1>
+        <h1 class="rk-logo">
+            <a routerLink="home">{{ _infoService.info.titulo }}
+                <sup></sup>
+            </a>
+        </h1>
         <nav class="rk-navigation">
             <ul class="rk-menu">
-                <li class="rk-menu__item" routerLinkActive="active"><a routerLink="home" class="rk-menu__link">Inicio</a>
+                <li class="rk-menu__item" routerLinkActive="active">
+                    <a routerLink="home" class="rk-menu__link">Inicio</a>
                 </li>
                 <li class="rk-menu__item" routerLinkActive="active">
                     <a routerLink="about" class="rk-menu__link">Nosotros</a>
                 </li>
             </ul>
-            <form class="rk-search">
-                <input type="text" placeholder="Search" id="urku-search" class="rk-search-field">
+            <div class="rk-search">
+                <input type="text" (keyup.enter)="buscarProducto(txtBuscar.value)" placeholder="Buscar..." id="urku-search" class="rk-search-field" #txtBuscar>
                 <label for="urku-search">
-          <svg>
-            <use xlink:href="assets/img/symbols.svg#icon-search"></use>
-          </svg>
-        </label>
-            </form>
+                    <svg>
+                        <use xlink:href="assets/img/symbols.svg#icon-search"></use>
+                    </svg>
+                </label>
+            </div>
         </nav>
     </div>
 </header>
